k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: NodePort 
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: minio
