k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivebox-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hivebox.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hivebox-service
                port:
                  number: 80
